<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_settings">Новости</string>
    <string name="activate">Активировать</string>
    <string name="activte_service_alert_title">Подключить услугу?</string>
    <string name="app_name">Мой UMS</string>
    <string name="btnObshenie">Общение</string>
    <string name="btn_balance">Баланс</string>
    <string name="btn_call">Позвонить</string>
    <string name="btn_call_alert_title">Позвонить?</string>
    <string name="btn_options">Пакеты минут/смс</string>
    <string name="btn_ostatok_trafika">Проверить остаток трафика</string>
    <string name="btn_ostatok">Проверить остаток</string>
    <string name="btn_pack">Пакеты</string>
    <string name="btn_packages">Интернет пакеты</string>
    <string name="btn_services">Услуги</string>
    <string name="btn_shop">Купить</string>
    <string name="btn_tariffs">Тарифы</string>
    <string name="change_tarif_btn">Перейти</string>
    <string name="channge_tarif_besh_alert">Перейти на тарифный план BESH?</string>
    <string name="channge_tarif_444_alert">Перейти на тарифный план GAP BOR?</string>
    <string name="channge_tarif_555_alert">Перейти на тарифный план 555?</string>
    <string name="channge_tarif_777_alert">Перейти на тарифный план 777?</string>
    <string name="channge_tarif_alert">Смена тарифа</string>
    <string name="channge_tarif_baraka_alert">Перейти на тарифный план BARAKA?</string>
    <string name="channge_tarif_maxi_new_alert">Перейти на тарифный план MAXI NEW?</string>
    <string name="channge_tarif_optima_alert">Перейти на тарифный план OPTIMA 333?</string>
    <string name="channge_tarif_perfect_alert">Перейти на тарифный план PERFECT?</string>
    <string name="channge_tarif_start_alert">Перейти на тарифный план TERMINAL?</string>
    <string name="channge_tarif_ultra_alert">Перейти на тарифный план ULTRA?</string>
    <string name="check">Проверить</string>
    <string name="check_connection">Проверте подключение к интернету</string>
    <string name="deactivate">Деактивировать</string>
    <string name="deactivate_service_alert_title">Отключить услугу?</string>
    <string name="get_qarz_alert_title">Получить?</string>
    <string name="get_qarz_btn">Получить</string>
    <string name="logo_string">ОПЕРАТОР СВЯЗИ, КАКИМ ОН ДОЛЖЕН БЫТЬ</string>
    <string name="main_app_title">Мой UMS</string>
    <string name="mini_packages_100_mb">Мини 100 Mb</string>
    <string name="mini_packages_50_mb">Мини 50 Mb</string>
    <string name="mini_packages_dsc">Срок действия интернет пакетов 1 сутки</string>
    <string name="minutes_120">120 Минут</string>
    <string name="minutes_180">180 Минут</string>
    <string name="minutes_300">300 Минут</string>
    <string name="minutes_package_120">Пакет 120 минут</string>
    <string name="minutes_package_180">Пакет 180 минут</string>
    <string name="minutes_package_300">Пакет 300 минут</string>
    <string name="nav_drawer_item_feedback">Обратная связь</string>
    <string name="nav_drawer_item_language">Смена языка</string>
    <string name="nav_drawer_item_news">Новости</string>
    <string name="nav_drawer_item_rate">Оценить приложение</string>
    <string name="nav_drawer_item_share">Поделиться</string>
    <string name="nav_drawer_title">Дополнительно</string>
    <string name="night_1000">Ночь 1000 Mb</string>
    <string name="night_10000">Ночь 10000 Mb</string>
    <string name="night_2000">Ночь 2000 Mb</string>
    <string name="night_20000">Ночь 20000 Mb</string>
    <string name="night_3000">Ночь 3000 Mb</string>
    <string name="night_5000">Ночь 5000 Mb</string>
    <string name="night_50000">Ночь 50000 Mb</string>
    <string name="night_drive_1_day">1 сутка</string>
    <string name="night_drive_30_day">30 суток</string>
    <string name="night_drive_7_days">7 суток</string>
    <string name="night_drive_dsc">Услуга «Ночной DRIVE» позволяет абонентам неограниченно пользоваться интернетом каждую ночь с 0:00 до 8:00</string>
    <string name="no">НЕТ</string>
    <string name="package_1000">Пакет 1000 Mb</string>
    <string name="package_10000">Пакет 10000 Mb</string>
    <string name="package_2000">Пакет 2000 Mb</string>
    <string name="package_300">Пакет 300 Mb</string>
    <string name="package_3000">Пакет 3000 Mb</string>
    <string name="package_500">Пакет 500 Mb</string>
    <string name="package_5000">Пакет 5000 Mb</string>
    <string name="request_title">Нужно разрешение!</string>
    <string name="request_title_message">Приложение требует разрешение, для того что бы совершать ussd запросы</string>
    <string name="send_to">Поделиться</string>
    <string name="service_2_line_dsc">Режим ожидания вызова позволяет в процессе разговора с другим абонентом ответить на входящий звонок (либо позвонить другому абоненту) и удержать поступивший вызов до завершения текущего разговора, то есть поочерёдно разговаривать с двумя абонентами.</string>
    <string name="service_2_line_name">Ожидание и удержание вызова</string>
    <string name="service_4gLte_dsc">"4G LTE в любой точке города Ташкента!
Интернет UMS на 4G LTE скоростях без лишних затрат!
Стоимость подключения услуги – $0,00"</string>
    <string name="service_4gLte_name">4G LTE</string>
    <string name="service_active_checks">Проверка активных услуг</string>
    <string name="service_active_checks_dsc">USSD - Команда *140# дает возможность проверить активные услуги</string>
    <string name="service_anti_aon_dsc">"Использование услуги «Антиопределитель номера»:
Абонентская плата - $0,10 в день
Включение/отключение услуги «Антиопределитель номера» - бесплатно."</string>
    <string name="service_anti_aon_name">АнтиАОН</string>
    <string name="service_block_reklama_dsc" />
    <string name="service_block_reklama_name">Запрет рассылок</string>
    <string name="service_family_dsc">"Абонентская плата за пользование услугой - $0,10 в день.
Стоимость исходящего звонка абонентам МТС в Российской Федерации, Украине, Белоруссии и Туркменистане, а также VIVACell-MTS в Армении - $0,25 за минуту разговора"</string>
    <string name="service_family_name">Услуга FAMILY</string>
    <string name="service_qarz_dsc">"Данная услуга позволяет получить на свой счет $3 для дальнейшего использования на услуги связи в счет будущей оплаты, сроком на 3 дня.
По истечении срока действия услуги «Обещанный платеж» со счета будет списана сумма равная $3,5."</string>
    <string name="service_qarz_name">Обещанный платеж</string>
    <string name="service_rouming_calls_dsc">Тарифы на международные звонки Центральная Азия (Таджикистан,Казахстан,Туркменистан,Кыргызстан) - 0,55 Россия и остальные страны СНГ - 0,75 Европа - 1,65 Азия - 2,05 Остальной мир - 1,95</string>
    <string name="service_rouming_calls_name">Международные Звонки</string>
    <string name="service_super_0_dsc">"УСЛУГА «Super 0», предназначен для осуществления бесплатных исходящих звонков на сеть мобильного оператора UMS по Республике Узбекистан;
стоимость услуги всего — $1, снимается в момент активации, при положительном балансе! При подключенной услуге «Super 0», услуга «Конференц-связь» недоступна;
Срок действия услуги неограничен;"</string>
    <string name="service_super_0_name">Super 0</string>
    <string name="service_vam_zvonili_dsc">"При подключении нового номера абонентам предоставляется возможность активировать услугу бесплатно.
По истечению 30 дней услуга будет тарифицироваться по $0,02 в сутки.
Абонентская плата за услугу «Вам звонили / Я на связи» для действующих абонентов - $0,02 в сутки."</string>
    <string name="service_vam_zvonili_name">Вам звонили &amp; Я на связи</string>
    <string name="set_language">Язык</string>
    <string name="share_link">Загрузите удобное приложение для абонентов UMS: https://play.google.com/store/apps/details?id=uz.umsdiller.ussdums</string>
    <string name="shop_10000_night_package">Ночной пакет на 10000 Mb</string>
    <string name="shop_10000_package">Интернет пакет на 10000 Mb</string>
    <string name="shop_1000_night_package">Ночной пакет на 1000 Mb</string>
    <string name="shop_1000_package">Интернет пакет на 1000 Mb</string>
    <string name="shop_20000_night_package">Ночной пакет на 20000 Mb</string>
    <string name="shop_2000_night_package">Ночной пакет на 2000 Mb</string>
    <string name="shop_2000_package">Интернет пакет на 2000 Mb</string>
    <string name="shop_3000_night_package">Ночной пакет на 3000 Mb</string>
    <string name="shop_3000_package">Интернет пакет на 3000 Mb</string>
    <string name="shop_300_package">Интернет пакет на 300 Mb</string>
    <string name="shop_50000_night_package">Ночной пакет на 50000 Mb</string>
    <string name="shop_5000_night_package">Ночной пакет на 5000 Mb</string>
    <string name="shop_5000_package">Интернет пакет на 5000 Mb</string>
    <string name="shop_500_package">Интернет пакет на 500 Mb</string>
    <string name="shop_button_alert">Купить</string>
    <string name="shop_drive_1_day_package">Ночной DRIVE на 1 сутку</string>
    <string name="shop_drive_30_day_package">Ночной DRIVE на 30 суток</string>
    <string name="shop_drive_7_day_package">Ночной DRIVE на 7 суток</string>
    <string name="shop_mini_100_package">Мини пакет на 100 Mb</string>
    <string name="shop_mini_50_package">Мини пакет на 50 Mb</string>
    <string name="sms_100">SMS 100</string>
    <string name="sms_300">SMS 300</string>
    <string name="sms_packages_100">Смс пакет 100</string>
    <string name="sms_packages_300">Смс пакет 300</string>
    <string name="status">Проверка статуса</string>
    <string name="tarif_444_dsc">"444 минут на исходящие звонки по Узбекистану
50 Мб включенного мобильного интернета
Услуга "Супер 0"
$ 4,00 Абонентская плата (в месяц)"</string>
    <string name="tarif_444_name">Gap bor!</string>
    <string name="tarif_555_dsc">"555 минут на исходящие звонки по Узбекистану
555 Мб включенного мобильного интернета
555 исходящих SMS по Узбекистану
$ 8,00 Абонентская плата (в месяц)"</string>
    <string name="tarif_555_name">555</string>
    <string name="tarif_777_dsc">"777 минут на исходящие звонки по Узбекистану
777 Мб включенного мобильного интернета
777 исходящих SMS по Узбекистану
$ 10,00 Абонентская плата (в месяц)"</string>
    <string name="tarif_777_name">777</string>
    <string name="title_call_operator">Звонок оператору</string>
</resources>