<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/fragments_background"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/logo"/>
        <TextView
            android:layout_marginRight="20dp"
            android:textSize="@dimen/text_size_logo_dsc"
            android:textColor="#ffe62229"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo_string"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/btnBalance"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                app:srcCompat="@drawable/balance_icon"
                android:clickable="true"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_balance"/>

            <ImageView
                android:id="@+id/btnTariffs"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                android:layout_marginTop="@dimen/icons_margin_top"
                app:srcCompat="@drawable/tarifs_icon"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_tariffs"/>

            <ImageView
                android:id="@+id/btnOptions"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                android:layout_marginTop="@dimen/icons_margin_top"
                app:srcCompat="@drawable/sms_minutes_icon"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btnObshenie"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp">
            <ImageView
                android:id="@+id/btnPackages"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                app:srcCompat="@drawable/packages_icon"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_pack"/>

            <ImageView
                android:id="@+id/btnServices"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                android:layout_marginTop="@dimen/icons_margin_top"
                app:srcCompat="@drawable/services_icon"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_services"/>

            <ImageView
                android:id="@+id/btnCall"
                android:layout_width="@dimen/icons_main_fragment_width"
                android:layout_height="@dimen/icons_main_fragment_heigth"
                android:layout_marginTop="@dimen/icons_margin_top"
                app:srcCompat="@drawable/phone"/>
            <TextView
                android:textSize="@dimen/text_size"
                android:textColor="#ff000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/title_call_operator"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>