<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/fragments_background" android:paddingTop="@dimen/activity_vertical_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView  android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <Button android:textColor="@color/colorAccent" android:id="@+id/trafficNightBalance" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/btn_ostatok_trafika" android:layout_weight="0.79" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_1000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop1000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 2" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_2000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop2000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 3,5" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_3000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop3000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 5" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_5000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop5000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 7" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_10000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop10000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 10" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_20000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop20000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 15" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0">
                <TextView android:textSize="20.0dip" android:textColor="#ff3c3f41" android:id="@+id/textsdfsView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/night_50000" android:layout_weight="1.0" />
                <Button android:textColor="@color/colorAccent" android:id="@+id/shop50000nightPackage" android:background="@drawable/selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="$ 20" />
            </LinearLayout>
            <View android:background="@drawable/separator" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>